--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -164,8 +164,19 @@
                         			container.appendChild(document.createElement('br'));
 
                         			contentParagraph = document.createElement('p');
-						if (typeof(lc) !== 'undefined' && lc != null && lc != 'None' && lc != 'null' && lc.length == 0 ){
-                        				contentParagraph.innerHTML = lc;
+						if (typeof(lc) !== 'undefined'){
+							try{
+							cats=eval(lc);
+							span_cats=Array();
+							for ( key in cats ){
+								c = cats[key];
+								span_cats.push("<span class=\"text_bubble_cats\"><a href=\"/category/"+c+"\">"+c+"</a></span>");
+							}
+							}catch(e){
+								span_cats=Array();
+							}
+							
+							contentParagraph.innerHTML = span_cats.join(" ");
 						} else {
                         				contentParagraph.innerHTML = dateUpdated;
 						}
@@ -269,7 +280,7 @@
                                         <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Import to Instapaper</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Import</a></li>
                                 </ul>
                         </div>
                         <div id="right_box_bot">
