--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -1,7 +1,7 @@
 <html>
 <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/landing_form.css" />
+        <link rel="stylesheet" type="text/css" href="/css/landing_form.css" />
        
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width = 900"/>
@@ -37,7 +37,7 @@
         document.getElementById('fb-root').appendChild(e);
       }());
     </script>
-	<a href="javascript:fblogin();"> <img style="boarder: medium none" width="80" height="80" title="Join Instaright Web App with your Facebook account" alt="Facebook" src="static/images/facebook-button.png" /> </a>
+	<a href="javascript:fblogin();"> <img style="boarder: medium none" width="80" height="80" title="Join Instaright Web App with your Facebook account" alt="Facebook" src="/static/images/facebook-button.png" /> </a>
 	<script>
 		function fblogin(){
 			FB.login(function(response){
