--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -79,7 +79,7 @@
 
 <div id="inset">
     <div id="inset_shimmer">
-        <div class="slogan">Instaright tool - Browser plugins, importers and more</div>
+        <div class="slogan">Instaright tools - Browser plugins, importers and more</div>
 	<div class="addons">
 		<div class="inline">
 			<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="static/images/instaright_firefox_addon.png" /></a>
@@ -112,6 +112,12 @@
 			</div>
 		</div>
 	</div>
+		<!--div class="line_separator" ></div>
+        	<div class="slogan">Instaright importer - Import Delicious bookmarks into Instapaper</div>
+		<div class="import_delicious">
+			<p>Have you heard that Delicious has been acquired by AVOS? You can protect your bookmarks by importing them into Instapaper</p>
+			<a href="/tools/delicious" title="Delicious Instapaper importer">Instapaper delicious importer is perfect for for your need</a>
+		</div-->
     </div>
 </div>
 <br class="clear-both" />
