--- a/backend/css/landing_form.css
+++ b/backend/css/landing_form.css
@@ -157,3 +157,14 @@ body{
 	margin-left:-160px;
 	text-align: center;
 }
+.slogan_smaller {
+    color: #003399;
+    display: block;
+    font-family: Arial,Helvetica,Verdana,sans-serif;
+    font-size: 25px;
+    margin-top: 30px;
+    float: left;
+    padding: 0;
+    padding-left: 100px;
+    text-align: center;
+}
